# xfce4-hiddenapps-plugin

./: .gitignore  AUTHORS  README.adoc  README.md  flake.nix  meson.build
icons/: meson.build
po/: LINGUAS  POTFILES.in  kk.po  vi.po
src/: config.c  config.h  dialogs.c  dialogs.h  hiddenapps.desktop.in  menu.c  menu.h  meson.build  plugin.c  plugin.h  sn-backend.c  sn-backend.h  sn-host.c  sn-host.h  sn-item.c  sn-item.h  sn-watcher.c  sn-watcher.h  statusnotifier.c  statusnotifier.h  watcher.c  watcher.h
src/dbus/: org.freedesktop.StatusNotifierItem.xml  org.freedesktop.StatusNotifierWatcher.xml  org.kde.StatusNotifierWatcher.xml  sn-backend.gresource.xml
